Added the main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline for Network Security MLOps
+name: CI/CD for Network Security MLOps
 
 on:
   push:
@@ -21,28 +21,25 @@ jobs:
 
       - name: 🧪 Install Dependencies
         run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: ⚙️ Set up DVC
         uses: iterative/setup-dvc@v1
 
-      - name: ⬇️ Pull DVC Data (if using remote)
+      - name: ⬇️ Pull DVC Data
         run: |
-          dvc pull || echo "No remote or data to pull."
+          dvc pull || echo "No DVC remote configured yet."
 
-      - name: 🚀 Run Main Pipeline
+      - name: 🚀 Run MLOps Pipeline from app.py
         run: |
-          source venv/bin/activate
-          python main.py
+          python app.py
 
-      - name: ✅ Commit Updated DVC Files
+      - name: ✅ Track and Push Artifacts with DVC
         run: |
-          git config --global user.email "your_email@example.com"
-          git config --global user.name "Your Name"
-          dvc add artifacts/NetworkSecurityTrainingPipeline
-          git add artifacts/*.dvc artifacts/.gitignore
-          git commit -m "Update artifacts via GitHub Actions" || echo "No changes to commit"
-          git push || echo "Nothing to push"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "${{ github.actor }}"
+          dvc add artifacts/NetworkSecurityTrainingPipeline || echo "No new artifacts"
+          git add artifacts/*.dvc artifacts/.gitignore || true
+          git commit -m "GitHub Actions: Track updated artifacts" || echo "Nothing to commit"
+          git push origin main || echo "Nothing to push"
