--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD for Network Security MLOps
+name: CI/CD for Network Security MLOps Project
 
 on:
   push:
@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🔄 Checkout Repository
+      - name: 🔄 Checkout Code
         uses: actions/checkout@v3
 
-      - name: 🐍 Set up Python
+      - name: 🐍 Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: 🧪 Install Dependencies
+      - name: 📦 Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -27,19 +27,30 @@ jobs:
       - name: ⚙️ Set up DVC
         uses: iterative/setup-dvc@v1
 
-      - name: ⬇️ Pull DVC Data
+      - name: 🔐 Configure DVC Remote (DagsHub S3 Style)
         run: |
-          dvc pull || echo "No DVC remote configured yet."
+          dvc remote add origin s3://dvc
+          dvc remote modify origin endpointurl https://dagshub.com/Ananddd06/Network_Security_end_to_end_Mlops_DVC_Mlflow.s3
+          dvc remote modify origin --local access_key_id ${{ secrets.DVC_ACCESS_KEY_ID }}
+          dvc remote modify origin --local secret_access_key ${{ secrets.DVC_SECRET_ACCESS_KEY }}
 
-      - name: 🚀 Run MLOps Pipeline from app.py
+      - name: ⬇️ Pull Data from DVC Remote
+        run: |
+          dvc pull || echo "No DVC data found or needed."
+
+      - name: 🚀 Run MLOps Pipeline (app.py)
         run: |
           python app.py
 
-      - name: ✅ Track and Push Artifacts with DVC
+      - name: ✅ Track and Commit New Artifacts
         run: |
+          dvc add artifacts/NetworkSecurityTrainingPipeline || echo "No new artifacts"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git config --global user.name "${{ github.actor }}"
-          dvc add artifacts/NetworkSecurityTrainingPipeline || echo "No new artifacts"
           git add artifacts/*.dvc artifacts/.gitignore || true
-          git commit -m "GitHub Actions: Track updated artifacts" || echo "Nothing to commit"
+          git commit -m "Update artifacts via GitHub Actions" || echo "Nothing to commit"
           git push origin main || echo "Nothing to push"
+
+      - name: ⬆️ Push Artifacts to DVC Remote
+        run: |
+          dvc push || echo "No new DVC files to push"
