--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD for Network Security MLOps Project
+name: CI/CD for Network Security MLOps (No DVC)
 
 on:
   push:
@@ -7,14 +7,14 @@ on:
     branches: [main]
 
 jobs:
-  mlops_pipeline:
+  run_pipeline:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🔄 Checkout Code
+      - name: 🔄 Checkout Repository
         uses: actions/checkout@v3
 
-      - name: 🐍 Set up Python 3.10
+      - name: 🐍 Set Up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
@@ -24,33 +24,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: ⚙️ Set up DVC
-        uses: iterative/setup-dvc@v1
-
-      - name: 🔐 Configure DVC Remote (DagsHub S3 Style)
-        run: |
-          dvc remote add -f origin s3://dvc
-          dvc remote modify origin endpointurl https://dagshub.com/Ananddd06/Network_Security_end_to_end_Mlops_DVC_Mlflow.s3
-          dvc remote modify origin --local access_key_id ${{ secrets.DVC_ACCESS_KEY_ID }}
-          dvc remote modify origin --local secret_access_key ${{ secrets.DVC_SECRET_ACCESS_KEY }}
-
-      - name: ⬇️ Pull Data from DVC Remote
-        run: |
-          dvc pull || echo "No DVC data found or needed."
-
-      - name: 🚀 Run MLOps Pipeline (app.py)
+      - name: 🚀 Run app.py MLOps Pipeline
         run: |
           python app.py
 
-      - name: ✅ Track and Commit New Artifacts
+      - name: 📤 Push Changes to GitHub
         run: |
-          dvc add artifacts/NetworkSecurityTrainingPipeline || echo "No new artifacts"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git config --global user.name "${{ github.actor }}"
-          git add artifacts/*.dvc artifacts/.gitignore || true
-          git commit -m "Update artifacts via GitHub Actions" || echo "Nothing to commit"
-          git push origin main || echo "Nothing to push"
-
-      - name: ⬆️ Push Artifacts to DVC Remote
-        run: |
-          dvc push || echo "No new DVC files to push"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git add .
+          git commit -m "🔁 Auto-update from pipeline run" || echo "No changes to commit"
+          git push origin main || echo "No changes to push"
