--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD for Network Security MLOps (No DVC)
+name: CI/CD for Network Security MLOps (Dagshub Git + MLflow, No DVC)
 
 on:
   push:
@@ -24,14 +24,21 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 🚀 Run app.py MLOps Pipeline
+      - name: 🔐 Configure Git Remote with Dagshub Auth
+        run: |
+          git remote set-url origin https://${{ secrets.DAGSHUB_USERNAME }}:${{ secrets.DAGSHUB_TOKEN }}@dagshub.com/${{ secrets.DAGSHUB_USERNAME }}/Network_Security_end_to_end_Mlops_DVC_Mlflow.git
+
+      - name: 🚀 Run app.py (with MLflow + Git Tracking)
         run: |
           python app.py
+        env:
+          MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
+          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
 
-      - name: 📤 Push Changes to GitHub
+      - name: 📤 Push Code + Artifacts to Dagshub via Git
         run: |
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "${{ secrets.DAGSHUB_USERNAME }}"
+          git config --global user.email "${{ secrets.DAGSHUB_USERNAME }}@dagshub.com"
           git add .
-          git commit -m "🔁 Auto-update from pipeline run" || echo "No changes to commit"
-          git push origin main || echo "No changes to push"
+          git commit -m "🔁 Auto-update: pipeline run outputs" || echo "Nothing to commit"
+          git push origin main || echo "Nothing to push"
